--- a/TODO_roast/S04.md
+++ b/TODO_roast/S04.md
@@ -57,7 +57,8 @@
   - 5/16 pass (1, 3, 7, 8, 10). Then crashes with `is-deeply expects right`. Failures: post-if as expression return value (2, 4, 6, 9), `is-deeply` not handling all argument forms (11+). Difficulty: Medium
 - [ ] roast/S04-statement-modifiers/unless.t
   - 3/10 pass (2, 5, 7). Failures: post-unless return value (1, 3-4, 6), placeholder blocks (8), terminator detection (9), `$_` in blocks (10). Difficulty: Medium
-- [x] roast/S04-statement-modifiers/until.t
+- [ ] roast/S04-statement-modifiers/until.t
+  - 4/5 pass (1-4). Failure: test 5 requires `$++` (anonymous state variable) support. The test checks that `until` terminates comma-separated expressions: `eval-lives-ok '1,2, until $++', "until is a terminator even after comma"`. Basic until statement modifier and comma-separated expressions with modifiers work correctly. Difficulty: Low (just need `$++` support)
 - [x] roast/S04-statement-modifiers/values_in_bool_context.t
   - 24/24 pass.
 - [x] roast/S04-statement-modifiers/while.t
