--- a/TODO_roast/S02.md
+++ b/TODO_roast/S02.md
@@ -14,15 +14,15 @@
   - 3/5 pass. Test 3: calling sub `if` without parens should parsefail (keyword disambiguation). Test 5: keyword `if` without following whitespace should fail
 - [x] roast/S02-lexical-conventions/pod-in-multi-line-exprs.t
 - [ ] roast/S02-lexical-conventions/sub-block-parsing.t
-  - 3/11 pass (tests 1-3). Failures: passing arguments to immediately-invoked `sub {}()`, block parsing with newline/semicolon context, sub/hash disambiguation (`fa`/`fb` old syntax)
+  - 0/11 pass (parser regression). Parse error at `sub { 42 }()` — immediately-invoked sub not supported by new parser
 - [ ] roast/S02-lexical-conventions/unicode.t
-  - 36/44 pass. Failures: Unicode string evaluations in `do {}` blocks (tests 4-5), Unicode sub names with named-params/placeholders (tests 27-30), bracket mapping edge cases (U+298D, U+301D→U+301F)
+  - 0/44 pass (parser regression). Parse error at `do { sub 恆等($x) {$x}; 恆等($二) }` — sub declaration inside `do` block with Unicode sub name
 - [ ] roast/S02-lexical-conventions/unicode-whitespace.t
   - 0/50 pass. Requires `uniprop` function and Unicode whitespace recognition in expressions (OGHAM SPACE MARK, EN QUAD, etc.) and "long dot" contexts. Needs `uniprop($char, "White_Space")` support
 - [ ] roast/S02-lexical-conventions/unspace.t
   - Fatal: `Module not found: MONKEY-TYPING`. Requires `use MONKEY-TYPING` pragma
 - [ ] roast/S02-lists/indexing.t
-  - 0/4 pass. Fatal: `is expects right` — likely `is` called with wrong argument form (possible `is()` parsing issue with list context)
+  - 1/4 pass (test 2). Test 1 fails: list indexing context. Tests 3-4 not reached (runtime error)
 - [ ] roast/S02-lists/tree.t
   - 0/14 pass. Fatal: `is expects right` — same `is()` argument parsing issue
 - [ ] roast/S02-literals/adverbs.t
@@ -101,9 +101,12 @@
 - [ ] roast/S02-magicals/VM.t
   - 10/32 pass (12-16, 26-30). `.raku`, `.gist`, `.Str` methods work. Failures: `.name`, `.auth`, `.version`, `.signature`, `.desc`, `.config`, `.precomp-ext`, `.precomp-target`, `.prefix`, `.properties` return wrong values. Difficulty: Low-Medium (need to populate VM properties)
 - [ ] roast/S02-names/bare-sigil.t
+  - 0/? pass. Parse error at `my @` — bare sigil declaration not supported
 - [ ] roast/S02-names/caller.t
+  - 0/? pass. Parse error at `my $a is dynamic = 9` — `is dynamic` trait not supported by parser
 - [ ] roast/S02-names/dynamic-scope.t
 - [ ] roast/S02-names/identifier.t
+  - 0/? pass. Parse error at `sub don't($x) { !$x }` — apostrophe in identifier (Raku allows `'` in sub names)
 - [ ] roast/S02-names/indirect.t
 - [ ] roast/S02-names/is_default.t
 - [ ] roast/S02-names/is_dynamic.t
@@ -129,6 +132,7 @@
 - [x] roast/S02-one-pass-parsing/misc.t
 - [ ] roast/S02-packages/package-lookup.t
 - [ ] roast/S02-types/anon_block.t
+  - 0/? pass. Parse error at `{ &^x() }.( &sub )` — anonymous block with placeholder params and dot-call
 - [ ] roast/S02-types/array_extending.t
 - [ ] roast/S02-types/array_ref.t
 - [ ] roast/S02-types/array-shapes.t
@@ -167,7 +171,7 @@
   - Tests 107-108: Mixins with `but` operator on hashes
 - [ ] roast/S02-types/hyperwhatever.t
 - [ ] roast/S02-types/infinity.t
-  - 11/21 pass (1-8, 10, 12-13). Good Inf support. Failures: `truncate(Inf)` (9), assigning Inf to Int error msg (11), only 13 tests reached (runtime error after test 13). Difficulty: Low-Medium
+  - 0/21 pass (parser regression). Parse error at `fails-like { Inf.Int }` — `fails-like` function with block + type argument not parsed
 - [ ] roast/S02-types/instants-and-durations.t
 - [ ] roast/S02-types/int-uint.t
 - [ ] roast/S02-types/isDEPRECATED.t
@@ -187,7 +191,7 @@
 - [ ] roast/S02-types/nested_arrays.t
 - [ ] roast/S02-types/nested_pairs.t
 - [ ] roast/S02-types/nil.t
-  - ~14/67 pass. Failures: `return_nil() === Nil` identity (test 15), `.raku` on Nil (test 16), variable holding nil defined check (test 18), subset type assignment (test 26), mandatory param with Nil (test 28), optional param Nil handling (tests 29-30)
+  - 0/67 pass (parser regression). Parse error at `!~~ :i/iter/` — smartmatch negation with adverb-modified regex not parsed
 - [ ] roast/S02-types/nominalizables.t
 - [ ] roast/S02-types/num.t
   - 0/? pass. Parser panic (stack overflow) before any tests run. Likely complex parsing constructs in test file. Difficulty: High
@@ -213,7 +217,8 @@
 - [ ] roast/S02-types/unicode.t
 - [ ] roast/S02-types/version-stress.t
 - [ ] roast/S02-types/version.t
-  - 10/45 pass (only 10 reached). Version literals and comparisons work. Tests 1-10 pass (literal parsing, cmp, eqv, Version.new). Stopped early, likely syntax issue after test 10. Difficulty: Low-Medium
+  - 0/45 pass (parser regression). Parse error at `Order::Same` — package-qualified enum constants not supported by parser
 - [ ] roast/S02-types/whatever.t
-  - ~9/131 pass. Failures: Whatever type constraint (test 2), `*-1` as Code (test 5), WhateverCode execution (test 7), `*.meth` closure (test 13), `*.uc eq $str` Callable creation (tests 15-16), `@a[1..*]` slicing (test 18)
+  - 0/131 pass (parser regression). Parse error at `my $x = +*;` — WhateverCode with prefix operators not parsed
 - [ ] roast/S02-types/WHICH.t
+  - 0/? pass. Parse error at multiline `< ... >` angle bracket list — multiline word quoting not supported
