parser: accept signed unicode digit literals in signatures

--- a/TODO_roast/S06.md
+++ b/TODO_roast/S06.md
@@ -91,6 +91,8 @@
 - [ ] roast/S06-signature/tree-node-parameters.t
 - [ ] roast/S06-signature/type-capture.t
 - [ ] roast/S06-signature/types.t
+  - Progress: moved from early parse failure at `sub f(-١)` to executing the full file; signed numeric literal signature constraints now mostly work (integers/unum/rats and most Inf forms pass).
+  - Remaining blockers: U+2212 in exponent forms (e.g. `−4e−2`) and some Unicode infinity literal variants (`+∞`) still mismatch, plus unrelated return-type/concreteness/warning assertions in this file.
 - [ ] roast/S06-signature/unpack-array.t
 - [ ] roast/S06-signature/unpack-object.t
 - [ ] roast/S06-signature/unspecified.t
